--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <div class="links-container">
           <div class="links">
             <ul>
-              <li><a href="">About</a></li>
-              <li><a href="">Activities</a></li>
-              <li><a href="">Iteneries</a></li>
-              <li><a href="">Reviews</a></li>
-              <li><a href="">Gallery</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#activities">Activities</a></li>
+              <li><a href="#suggested">Iteneries</a></li>
+              <li><a href="#testimonials">Reviews</a></li>
+              <li><a href="#gallery">Gallery</a></li>
             </ul>
           </div>
         </div>
         <div class="linkss">
           <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Activities</a></li>
-            <li><a href="">Iteneries</a></li>
-            <li><a href="">Reviews</a></li>
-            <li><a href="">Gallery</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#activities">Activities</a></li>
+            <li><a href="#suggested">Iteneries</a></li>
+            <li><a href="#testimonials">Reviews</a></li>
+            <li><a href="#gallery">Gallery</a></li>
           </ul>
         </div>
         <div class="menu">
@@ -60,7 +60,7 @@
     <!-- hero section end -->
 
     <!-- our story -->
-    <section class="story container">
+    <section class="story container" id="about">
       <div class="row">
         <div class="text col-md-5">
           <h2>Our story</h2>
@@ -81,7 +81,7 @@
     <!-- our story end -->
 
     <!-- our activities start -->
-    <section class="activities container">
+    <section class="activities container" id="activities">
       <h2>Our activities</h2>
       <div class="container" id="pix">
         <div class="box" id="game">
@@ -177,7 +177,7 @@
     <!-- our activities end -->
 
     <!-- sightings -->
-    <section class="sightings container">
+    <section class="sightings container" id="sightings">
       <div class="left">
         <h2>Recent wildlife sightings</h2>
         <p>Wildlife sightings include elephant, kudu, sable antelope, zebra, wildebeest, the rare and endangered roan antelope, buffalo, lion, leopard, hyena, and many other wildlife species.</p>
@@ -198,7 +198,7 @@
     <!-- sightings end -->
     
     <!-- suggested -->
-    <section class="suggested">
+    <section class="suggested" id="suggested">
       <div class="container">
         <h2>Suggested itenaries</h2>
         <div class="row">
@@ -250,7 +250,7 @@
     <!-- suggested end -->
 
     <!-- Testimonials -->
-    <section class="testimonials">
+    <section class="testimonials" id="testimonials">
       <div class="container">
         <h2>Testimonials</h2>
         <div class="row">
@@ -286,7 +286,7 @@
     <!-- testimonials end -->
 
     <!-- gallery start -->
-    <section class="gallery">
+    <section class="gallery" id="gallery">
       <div class="container">
         <h2>Our gallery</h2>
         <div class="size">
@@ -319,7 +319,7 @@
     <!-- gallery end -->
 
     <!-- footer start -->
-    <footer>
+    <footer id="footer">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
